# kischvidimer

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTORS  Makefile  README.md  REUSE.toml  bmp.py  diff-project  diffui.css  diffui.html  diffui.js  diffui.py  generate-schematic.py  git.py  npxenv  png.py  progress.py  pyproject.toml  svg.py
.github/workflows/: pages.yml  pre-commit.yml
ci/: gitlab.yml
ci/schgen/: action.yml
filetypes/: fileparse.py
js-libraries/: hammer.min.js  mdl.min.css  mdl.min.js  panko_inflate.min.js  svg-pan-zoom.min.js
kischvidimer/: __main__.py  bmp.py  database.js  diff.py  diffs.js  diffui.css  diffui.html  diffui.js  diffui.py  fileparse.py  git.py  jpeg.py  kicad_common.py  kicad_modifiers.py  kicad_pro.py  kicad_sch.py  kicad_sym.py  kicad_variables.py  kicad_wks.py  netlister.py  pagelist.js  png.py  progress.py  project.py  resolver.py  schgen.py  search.js  settings.js  sexp.py  svg.py  themes.py  tooltip.js  util.js  viewport.js
kischvidimer/fonts/: newstroke.woff.license
kischvidimer/js-libraries/: hammer.min.js.license  material.min.js.license  pako_inflate.min.js.license  svg-pan-zoom.min.js  svg-pan-zoom.min.js.license
kischvidimer/templates/: pagelayout_default.kicad_wks.license
