# SPDX-FileCopyrightText: (C) 2025 Rivos Inc.
# SPDX-License-Identifier: Apache-2.0

[project]
name = "kischvidimer"
description = "KiCad schematic HTML viewer generator"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fonttools>=4.56.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  "pre-commit>=4.1.0",
  "reuse>=5.0.2",
  "ruff>=0.9.4",
]

[project.scripts]
kischvidimer = "kischvidimer.__main__:main"

[uv.tool]
package = true

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kischvidimer"]
license-files = ["LICENSES/*.txt"]

[tool.setuptools_scm]
version_file = "kischvidimer/_version.py"

[tool.ruff]
extend-exclude = [
  "kischvidimer/diff.py",
  "kischvidimer/fileparse.py",
  "kischvidimer/project.py",
  "kischvidimer/resolver.py",
]
indent-width = 2
line-length = 80

[tool.ruff.lint]
select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "E",   # pycodestyle errors
  "F",   # Pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  "SIM115",  # open-file-with-context-handler
]
